Remove virtual environment and env files from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1759,9 +1759,14 @@ __pycache__/
 
 # Virtual environments
 .venv/
+venv/
+env/
 
 # VS Code
 .vscode/
 
 # Windows
 Thumbs.db
+
+# Environment variables
+.env
