--- a/.gitignore
+++ b/.gitignore
@@ -1776,3 +1776,4 @@ fastapi_project_tutorial.egg-info/requires.txt
 fastapi_project_tutorial.egg-info/SOURCES.txt
 fastapi_project_tutorial.egg-info/top_level.txt
 app/__pycache__/schemas.cpython-313.pyc
+test.db
